# zaletaikaAPI-public

./: .env.prod.proxy-companion  .env.staging.proxy-companion  Dockerfile_db  Dockerfile_prod  Makefile  docker-compose-prod.yml  docker-compose-test.yml  pyproject.toml
config/config/: settings.py  urls.py
config/zaletaika_api/: apps.py  serializers.py  urls.py  utils.py  validators.py  views.py
sql_scripts/: dbsetup-script.sql
